[tool.poetry]
name = "mom-weekly-rankings-export"
version = "0.1.0"
description = ""
authors = ["Tim Cuddeback <cuddebtj@gmail.com>"]
readme = "README.md"
packages = [{include = "mom_weekly_rankings_export"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
PyYAML = "^6.0"
yfpy = "^8.0.9"
psycopg2-binary = "^2.9.3"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
jupyter = "^1.0.0"
ipykernel = "^6.15.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
